--- a/helm/camel-k/crds/crd-integration-platform.yaml
+++ b/helm/camel-k/crds/crd-integration-platform.yaml
@@ -21,9 +21,7 @@ metadata:
   annotations:
     controller-gen.kubebuilder.io/version: v0.6.1
   creationTimestamp: null
-  labels:
-    app: camel-k
-  name: integrationplatforms.camel.apache.org
+    labels:n    app: camel-k  name: integrationplatforms.camel.apache.org
 spec:
   group: camel.apache.org
   names:
@@ -85,6 +83,7 @@ spec:
                     enum:
                     - routine
                     - pod
+                    - mvnd
                     type: string
                   kanikoBuildCache:
                     description: 'Deprecated: Use PublishStrategyOptions instead enables
@@ -1643,6 +1642,7 @@ spec:
                     enum:
                     - routine
                     - pod
+                    - mvnd
                     type: string
                   kanikoBuildCache:
                     description: 'Deprecated: Use PublishStrategyOptions instead enables
